--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,64 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
   fonts:
     - family: Hagrid Text
       fonts:
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Heavy-trial.otf
+          weight: 900
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Heavy-italic-trial.otf
+          weight: 900
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Extrabold-trial.otf
+          weight: 800
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Extrabold-italic-trial.otf
+          weight: 800
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Bold-trial.otf
+          weight: 700
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Bold-italic-trial.otf
+          weight: 700
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Medium-trial.otf
+          weight: 500
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Medium-italic-trial.otf
+          weight: 500
+          style: italic
         - asset: third-party/fonts/Hagrid/Hagrid-Text-Regular-trial.otf
+          weight: 400
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Light-trial.otf
+          weight: 300
+        - asset: third-party/fonts/Hagrid/Hagrid-Text-Light-italic-trial.otf
+          weight: 300
+          style: italic
+
     - family: Hagrid
       fonts:
+        - asset: third-party/fonts/Hagrid/Hagrid-Heavy-trial.otf
+          weight: 900
+        - asset: third-party/fonts/Hagrid/Hagrid-Heavy-italic-trial.otf
+          weight: 900
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Extrabold-trial.otf
+          weight: 800
+        - asset: third-party/fonts/Hagrid/Hagrid-Extrabold-italic-trial.otf
+          weight: 800
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Medium-trial.otf
+          weight: 500
+        - asset: third-party/fonts/Hagrid/Hagrid-Medium-italic-trial.otf
+          weight: 500
+          style: italic
         - asset: third-party/fonts/Hagrid/Hagrid-Regular-trial.otf
+          weight: 400
+        - asset: third-party/fonts/Hagrid/Hagrid-Light-trial.otf
+          weight: 300
+        - asset: third-party/fonts/Hagrid/Hagrid-Light-italic-trial.otf
+          weight: 300
+          style: italic
+        - asset: third-party/fonts/Hagrid/Hagrid-Thin-trial.otf
+          weight: 100
+        - asset: third-party/fonts/Hagrid/Hagrid-Thin-italic-trial.otf
+          weight: 100
+          style: italic
