--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ unlinked_spec.ds
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 fvm
+.vscode/launch.json
