--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+        sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -82,3 +84,6 @@ flutter:
         - asset: third-party/fonts/Hagrid/Hagrid-Thin-Italic-trial.otf
           weight: 100
           style: italic
+
+flutter_intl:
+  enabled: true
