--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
         sdk: flutter
+  expandable: ^4.1.3
 
 dev_dependencies:
   # flutter_test:
