--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter_localizations:
         sdk: flutter
   expandable: ^4.1.3
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   # flutter_test:
