--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
         sdk: flutter
   expandable: ^4.1.3
   auto_size_text: ^2.1.0
+  flare_flutter: ^2.0.3
 
 dev_dependencies:
   # flutter_test:
