--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,7 +5,7 @@ include: package:pedantic/analysis_options.yaml
 
 analyzer:
   exclude:
-    - 'lib/generated/*'
+    - 'lib/generated/**'
     - 'example/**'
     - 'build/**'
     - '**.g.dart'
