--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ flutter:
     - assets/cv/
 
   fonts:
-    - family: MyIcons
+    - family: MyIcon
       fonts:
-        - asset: third-party/fonts/Icons/MyIcons.ttf
+        - asset: third-party/fonts/Icons/MyIcon.ttf
 
     - family: Hagrid Text
       fonts:
