--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,33 +2,37 @@ name: tsin.is
 description: Personal website of Roman Cinis.
 
 environment:
-  sdk: ">2.8.0"
+  sdk: ">2.9.0"
+  flutter: ">1.18.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
-        sdk: flutter
+    sdk: flutter
   expandable: ^4.1.4
   auto_size_text: ^2.1.0
   flare_flutter: ^2.0.6
   url_launcher: ^5.5.0
-  url_launcher_web: ^0.1.2
+  url_launcher_web: ^0.1.2+1
 
 dev_dependencies:
   # flutter_test:
   #   sdk: flutter
   pedantic: any
-  effective_dart: any
+  # effective_dart: any
 
 flutter_intl:
   enabled: true
+  localizely:
+    project_id: "e694868c-7311-4b3e-ad5c-c2716283b720\t"
 
 flutter:
   uses-material-design: false
 
   assets:
     - assets/images/
+    - assets/images/projects/
     # - assets/cv/
 
   fonts:
