--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flare_flutter: ^2.0.6
   url_launcher: ^5.5.0
   url_launcher_web: ^0.1.2+1
+  map: ^0.1.0+1
 
 dev_dependencies:
   # flutter_test:
