--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
             "type": "dart",
             "flutterMode": "release",
             "args": [
-                "--dart-define=FLUTTER_WEB_USE_SKIA=true",
-                "--dart-define=FLUTTER_WEB_USE_EXPERIMENTAL_CANVAS_TEXT=true"
+                // "--dart-define=FLUTTER_WEB_USE_SKIA=true",
+                // "--dart-define=FLUTTER_WEB_USE_EXPERIMENTAL_CANVAS_TEXT=true"
             ]
         }
     ]
