--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,20 @@ name: tsin.is
 description: Personal website of Roman Cinis.
 
 environment:
-  sdk: ">2.9.0"
-  flutter: ">1.20.0"
+  sdk: '>=2.10.0 <3.0.0'
+  flutter: '>1.22.0'
 
 dependencies:
+  auto_size_text:
+  expandable:
+  flare_flutter:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  expandable: ^4.1.4
-  auto_size_text: ^2.1.0
-  flare_flutter: ^2.0.6
-  url_launcher: ^5.5.0
-  url_launcher_web: ^0.1.2+1
-  map: ^0.1.0+1
+  map:
+  url_launcher:
+  url_launcher_web:
 
 dev_dependencies:
   # flutter_test:
