--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  map: ^0.2.0+1
+  map: 0.2.0+1
   url_launcher: ^5.7.10
 
 dev_dependencies:
